Fixed spacing on blue highlight for gtk notebook tabs

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -813,7 +813,7 @@ GtkImage {
   border-color: #E0E0E0;
   border-radius: 0px;
   border-style: solid;
-  border-width: 1px;
+  border-width: 0px;
   -GtkNotebook-initial-gap: 0;
 	-GtkNotebook-tab-curvature: 0;
 	-GtkNotebook-arrow-spacing: 5;
